--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -5,13 +5,14 @@ name: Hello World
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-#  pull_request:
-#    branches: [ "main" ]
+  workflow_call:
+    secrets: 
+      envPAT: 
+        required: true
+    
 
   # Allows you to run this workflow manually from the Actions tab
-#  workflow_dispatch:
+  workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
