--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -28,7 +28,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world from library YML!
+        run: |
+          echo Hello, world from library YML!
+          echo ${{env.USERNAME}}
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
