--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -6,6 +6,11 @@ name: Hello World
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   workflow_call:
+    inputs: 
+        username:
+          required: true
+          type: string
+      
     secrets: 
       envPAT: 
         required: true
@@ -30,7 +35,7 @@ jobs:
       - name: Run a one-line script
         run: |
           echo Hello, world from library YML!
-          echo ${{  env.USERNAME}}
+          echo ${{  username }}
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
