--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -32,8 +32,10 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: |
-          echo Hello, world from library YML!
+          echo Hello, world from library YML! Inputs.username is:
           echo ${{  inputs.username }}
+          echo token is 
+          echo ${{ secrets.envPAT }}
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
