--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -43,10 +43,22 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
 
-      - name: Run a called sh script
+      - name: Find called sh script
         run: |
-          echo Running shell script
-          chmod 700 ${{ github.action_path }}/helloworld.sh
-          sh ${{ github.action_path }}/helloworld.sh
-          shell: bash
+          echo Find shell script helloworld.sh
+          pwd
+          ls -alrt
+          cd ..
+          pwd
+          ls -alrt          
+
+      - name: check ${{ github.action_path }}
+        run: echo ${{ github.action_path }}
+        
+#      - name: Run a called sh script
+#        run: |
+#          echo Running shell script
+#          chmod 700 ${{ github.action_path }}/helloworld.sh
+#          sh ${{ github.action_path }}/helloworld.sh
+#          shell: bash
 
