--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -3,8 +3,8 @@ name: Hello World
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
-#   workflow_call:
-  repository_dispatch: 
+  workflow_call:
+#  repository_dispatch: 
     inputs: 
         username:
           required: true
