--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -34,9 +34,9 @@ jobs:
       - name: Run a one-line script
         run: |
           echo Hello, world from library YML! Inputs.username is:
-          echo $inputs.username
+          echo ${{ $inputs.username }}
           echo token is 
-          echo $secrets.envPAT
+          echo ${{ secrets.envPAT}}
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
